encode artist name for URL compatibility and refactor latestId retrieval